--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="user-dropdown" id="user-dropdown">
                         <div class="user-dropdown-header">
                             <div class="user-dropdown-name" id="user-name">User</div>
-                            <div class="user-dropdown-email" id="user-email"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0e7b7d6b7c4e6b766f637e626b206d6163">[email&#160;protected]</a></div>
+                            <div class="user-dropdown-email" id="user-email">user@example.com</div>
                         </div>
                         <div class="user-dropdown-item" onclick="event.stopPropagation();syncNow()">🔄 Sync Now</div>
                         <div class="user-dropdown-item" onclick="event.stopPropagation();exportData()">📤 Export Backup</div>
@@ -289,7 +289,7 @@
     </div>
     <div class="modal-o" id="modal-o"><div class="modal" id="modal"></div></div>
 </div>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script>
 // ==================== EARLY PASSWORD RECOVERY CHECK ====================
 // Check IMMEDIATELY before anything else runs - Supabase will clear the hash
 (function(){
