--- a/index.html
+++ b/index.html
@@ -1271,10 +1271,26 @@ function takeSyncSnapshot(){
             autoAddToInv: D.autoAddToInv
         };
         initialLoadComplete = true;
-        console.log('takeSyncSnapshot complete, initialLoadComplete:', initialLoadComplete);
+        // Update nid to be higher than any existing ID
+        updateNextId();
+        console.log('takeSyncSnapshot complete, initialLoadComplete:', initialLoadComplete, 'nid:', nid);
     } catch(e) {
         console.error('takeSyncSnapshot error:', e);
     }
+}
+
+function updateNextId(){
+    // Find the maximum ID across all data arrays to avoid collisions
+    var maxId = nid;
+    [D.ings, D.recs, D.menus, D.inv, D.shopping, D.preps, D.areas, D.cats, D.menuCats, D.recCats, D.units].forEach(function(arr){
+        if(arr && arr.length){
+            arr.forEach(function(item){
+                if(item && item.id && item.id >= maxId) maxId = item.id + 1;
+            });
+        }
+    });
+    nid = maxId;
+    console.log('Updated nid to:', nid);
 }
 
 function saveState(actionName){
@@ -2824,19 +2840,7 @@ function renderMenu(c,s){
                     m.recs.forEach(function(mr,idx){
                         var r=D.recs.find(function(x){return x.id===mr.recId;});
                         if(r){
-                            var displayQty = mr.qty;
-                            var displayUnit = mr.unit;
-                            var modeLabel = '';
-                            if(mr.outputMode === 'yield' || mr.unit === 'batch'){
-                                var output = calcRecipeOutput(r);
-                                var totalOutput = (mr.qty * output.qty).toFixed(1).replace(/\.0$/,'');
-                                displayQty = mr.qty;
-                                displayUnit = mr.qty === 1 ? 'batch' : 'batches';
-                                modeLabel = ' <span style="color:#00b894;font-size:calc(10px * var(--font-scale))">('+totalOutput+' '+(r.yieldUnit||output.unit)+')</span>';
-                            } else if(mr.outputMode === 'manual'){
-                                modeLabel = ' <span style="color:#a0aec0;font-size:calc(10px * var(--font-scale))">(manual)</span>';
-                            }
-                            html+='<div class="recipe-comp rec"><span class="rec-ing-name">📖 '+r.name+': '+displayQty+' '+displayUnit+modeLabel+'</span><button class="del-btn" onclick="delMenuRec('+m.id+','+idx+')">×</button></div>';
+                            html+='<div class="recipe-comp rec"><span class="rec-ing-name">📖 '+r.name+': '+mr.qty+' '+mr.unit+'</span><button class="del-btn" onclick="delMenuRec('+m.id+','+idx+')">×</button></div>';
                         }
                     });
                 }
@@ -2978,15 +2982,31 @@ function addMenuRec(menuId){
     html+='</select></div>';
     html+='<div id="rec-output-hint" style="padding:8px;background:rgba(253,203,110,.1);border-radius:6px;margin-bottom:12px;font-size:calc(11px * var(--font-scale));color:#fdcb6e"></div>';
 
-    // Batches needed
+    // Quantity and unit
     html+='<div style="display:flex;gap:8px">';
-    html+='<div class="form-g" style="flex:1"><label class="form-l">Batches Needed</label><input type="number" id="new-mr-batches" class="form-i" placeholder="1" value="1" step="0.1" min="0.1"></div>';
+    html+='<div class="form-g" style="flex:1"><label class="form-l">Quantity Needed</label><input type="number" id="new-mr-qty" class="form-i" placeholder="1" value="1" step="0.1"></div>';
+    html+='<div class="form-g" style="flex:1"><label class="form-l">Unit</label><select id="new-mr-unit" class="form-i">';
+    D.units.forEach(function(u){html+='<option value="'+u.abbr+'">'+u.abbr+'</option>';});
+    html+='</select></div>';
     html+='</div>';
 
     html+='<div style="display:flex;gap:8px;margin-top:16px"><button class="btn btn-s" onclick="closeModal()" style="flex:1">Cancel</button><button class="btn btn-p" onclick="saveMenuRec('+menuId+')" style="flex:1">Add</button></div>';
     m.innerHTML=html;
     mo.classList.add('open');
     updateMenuRecHint();
+    // Set default unit to recipe's output unit
+    setTimeout(function(){
+        var sel = document.getElementById('new-mr-rec');
+        if(sel){
+            var recId = +sel.value;
+            var rec = D.recs.find(function(r){return r.id===recId;});
+            if(rec){
+                var output = calcRecipeOutput(rec);
+                var unitSel = document.getElementById('new-mr-unit');
+                if(unitSel) unitSel.value = rec.yieldUnit || output.unit || 'ea';
+            }
+        }
+    }, 0);
 }
 
 function updateMenuRecHint(){
@@ -2999,6 +3019,9 @@ function updateMenuRecHint(){
         var output = calcRecipeOutput(rec);
         var modeLabel = rec.outputMode === 'manual' ? '✏️ Manual output' : '🔄 Yield calculation';
         hint.innerHTML='📖 <b>'+rec.name+'</b> produces <b>'+output.qty+' '+(rec.yieldUnit||output.unit)+'</b> per batch<br><span style="color:#a0aec0;font-size:calc(10px * var(--font-scale))">'+modeLabel+'</span>';
+        // Update default unit to match recipe output
+        var unitSel = document.getElementById('new-mr-unit');
+        if(unitSel) unitSel.value = rec.yieldUnit || output.unit || 'ea';
     }
 }
 
@@ -3009,12 +3032,13 @@ function saveMenuRec(menuId){
     saveState('Add menu recipe');
 
     var recId = +document.getElementById('new-mr-rec').value;
-    var batches = +document.getElementById('new-mr-batches').value || 1;
+    var qty = +document.getElementById('new-mr-qty').value || 1;
+    var unit = document.getElementById('new-mr-unit').value || 'ea';
 
     menu.recs.push({
         recId: recId,
-        qty: batches,
-        unit: 'batch'
+        qty: qty,
+        unit: unit
     });
     closeModal();
     render();
