--- a/index.html
+++ b/index.html
@@ -1931,7 +1931,7 @@ function onInvItemSelect(areaId){
             // No conversion - show conversion section
             if(convDiv)convDiv.style.display='block';
             if(convNewDiv)convNewDiv.style.display='none';
-            if(convSelect)convSelect.value='';
+            if(convSelect)convSelect.value='same';
             // Set default unit if ingredient has one
             if(ing&&ing.defUnit){
                 for(var i=0;i<unitSel.options.length;i++){
